--- a/css/fontello-codes.css
+++ b/css/fontello-codes.css
@@ -5,4 +5,6 @@
 .icon-buffer:before { content: '\e803'; } /* '' */
 .icon-cog:before { content: '\e804'; } /* '' */
 .icon-cog-1:before { content: '\e805'; } /* '' */
+.icon-link:before { content: '\e806'; } /* '' */
+.icon-search:before { content: '\e807'; } /* '' */
 .icon-folder-open-empty:before { content: '\f4c2'; } /* '' */
