--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?30030451');
-  src: url('../font/fontello.eot?30030451#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?30030451') format('woff2'),
-       url('../font/fontello.woff?30030451') format('woff'),
-       url('../font/fontello.ttf?30030451') format('truetype'),
-       url('../font/fontello.svg?30030451#fontello') format('svg');
+  src: url('../font/fontello.eot?32617238');
+  src: url('../font/fontello.eot?32617238#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?32617238') format('woff2'),
+       url('../font/fontello.woff?32617238') format('woff'),
+       url('../font/fontello.ttf?32617238') format('truetype'),
+       url('../font/fontello.svg?32617238#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?30030451#fontello') format('svg');
+    src: url('../font/fontello.svg?32617238#fontello') format('svg');
   }
 }
 */
@@ -61,4 +61,6 @@
 .icon-buffer:before { content: '\e803'; } /* '' */
 .icon-cog:before { content: '\e804'; } /* '' */
 .icon-cog-1:before { content: '\e805'; } /* '' */
+.icon-link:before { content: '\e806'; } /* '' */
+.icon-search:before { content: '\e807'; } /* '' */
 .icon-folder-open-empty:before { content: '\f4c2'; } /* '' */
