--- a/css/style.css
+++ b/css/style.css
@@ -31,15 +31,17 @@ header {
     display: block;
     padding-bottom: 381px;
 }
-
 .logo img {
     display: block;
+    height:50px;
     float: left;
     margin-left: 376px;
     margin-top: 40px;
 }
 
 .logo span a {
+    display:block;
+    width:120px;
     font-family: Raleway;
     color: #ffffff;
     font-size: 34px;
@@ -84,7 +86,7 @@ header {
     text-align: left;
 }
 
-.icons:before {
+.icons1:before {
     display: block;
     float: left;
     content: url(../img/icon-basket.img.png);
@@ -92,7 +94,7 @@ header {
     margin-left: 20px;
 }
 
-.icons:after {
+.icons1:after {
     display: block;
     float: left;
     content: url(../img/icon-search.img.png);
@@ -481,23 +483,7 @@ header {
 }
 
 .purchasenow a:hover {
-    display: block;
-    float: left;
-    margin-left: 440px;
-    margin-top: 50px;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-family: Raleway;
-    color: #ffffff;
     background-color: #998675;
-    font-size: 14px;
-    /* Приближение из-за подстановки шрифтов */
-    font-weight: 700;
-    line-height: 23px;
-    /* Приближение из-за подстановки шрифтов */
-    text-align: center;
-    padding: 19px 29px;
-    outline: 1px solid #998675;
 }
 
 .projects {
@@ -736,18 +722,8 @@ header {
 }
 
 .gallery a:hover {
-    display: block;
-    float: left;
-    margin-left: 500px;
-    text-transform: uppercase;
-    text-decoration: none;
-    text-align: center;
-    outline: 1px solid #998675;
-    padding: 19px 44px 19px 44px;
-    margin-top: 40px;
     color: #ffffff;
     background-color: #998675;
-    margin-bottom: 80px;
 }
 
 .video {
@@ -1516,4 +1492,471 @@ footer {
 }
 .bottominfo li a:hover {
     color:  #959595;
+}
+@media screen and (min-width:480px) and (max-width:800px){
+    .container{
+        width:100%;
+    }
+    .header{
+        width:100%;
+    }
+    .mainmenu{
+        display:block;
+        float:left;
+    }
+    .logo{
+        display:block;
+        float:left;
+        width:500px;
+    }
+    .mainmenu li{
+    display:block;
+        }
+    .logo img{
+        margin-left:260px;
+    }
+    .icons .flex-container{
+        display:flex;
+        flex-direction: column;
+        margin:0 auto;
+    }
+    .preview{
+        display:block;
+        padding-bottom:1300px;
+        width:100%;
+    }
+    .leftimg{
+        margin:auto;
+    }
+    .centerimg{
+        margin:auto;
+        margin-top:400px;
+    }
+    .rightimg{
+        margin:auto;
+        margin-top:880px;
+    }
+    .purchasenow{
+        width:100%;
+    }
+    .textleft{
+     margin:auto;
+        float:left;
+        margin-left:10px;
+        display:block;
+        float:left;
+    }
+    .purchasenow a{
+        display:block;
+        float:left;
+        margin-left:20px;
+    }
+        .projects h2{
+        width:100%;
+    }
+    .projects p{
+        width:100%;
+    }
+    .projmenu ul li{
+        display:block;
+        margin:30px;
+    }
+    .gallery{
+        margin:auto;
+        padding-bottom:300px;
+    }
+    .proj1{
+        margin-left:0px;
+        margin-bottom:30px;
+        margin-left:20px;
+    }
+    .proj2{
+        margin-left:0px;
+        margin-bottom:30px;
+    }
+    .proj3{
+        margin-left:0;
+        margin-bottom:0;
+        margin-left:20px;
+    }
+    .proj4{
+        margin-top:0;
+        margin-left:0;
+        margin-bottom:0;
+    }
+    .proj5{
+        margin-left:0;
+        margin-left:20px;
+    }
+    .proj6{
+        margin-left:0;
+        margin-bottom:30px;
+    }
+    .gallery a{
+        margin:auto;
+        margin-left:300px;
+    }
+    .video{
+        display:block;
+        width:100%;
+        margin:auto;
+    }
+    .video a{
+        margin:auto;
+        margin-top:250px;
+        margin-left:330px;
+    }
+    .video h2{
+        margin:auto;
+        margin-top:100px;
+        width:100%;
+    }
+    .video p{
+        width:100%;
+        margin:auto;
+    }
+    .mobile{
+        width:100%;
+        margin:auto;
+        padding-bottom:1600px;
+    }
+    .mobile img{
+        width:100%;
+        margin:auto;
+        display:block;
+        float:left;
+    }
+    .mobiletext{
+        width:100%;
+        margin:auto;
+    }
+    .mobiletext h2{
+        margin-top:1150px;
+        margin-left:20px;
+    }
+        .mobiletext p{
+        margin-left:20px;
+    }
+    .mobiletext ul{
+        margin-left:50px;
+        width:100%;
+    }
+    .achievements{
+        width:100%;
+        margin:auto;
+    }
+    .achievements .flex-container{
+         display:flex;
+        flex-direction: column;
+        margin:0 auto;
+    }
+    .posts{
+        width:100%;
+        margin:auto;
+    }
+    .posts p{
+        margin:auto;
+        width:100%;
+    }
+    .postsexamples .flex-container{
+         display:flex;
+        flex-direction: column;
+        margin:0 auto;
+    }
+    .partners{
+        margin:auto;
+        width:100%;
+    }
+    .partners .flex-container{
+        display:flex;
+        flex-direction: column;
+        margin:0 auto;
+    }
+    .partners .flex-container a{
+        margin-bottom:20px;
+    }
+    .footer{
+        width:100%;
+        margin:auto;
+    }
+    .footerup{
+        width:100%;
+        padding-bottom:1200px;
+    }
+    .compinfo{
+        width:100%;
+        margin:auto;
+    }
+    .logo2{
+        margin-left:30px;
+    }
+    .compinfo p{
+        margin-left:30px;
+    }
+    .more a{
+        margin-left:30px;
+    }
+    .recentposts{
+        width:100%;
+        margin:auto;
+    }
+    .recentposts h3{
+        margin-left:30px;
+    }
+    .footerposts{
+        margin-left:30px;
+    }
+    .bottom{
+        width:100%;
+        margin:auto;
+        padding-bottom:200px;
+    }
+    .bottommenu p{
+        width:100%;
+        margin:auto;
+        margin-left:30px;
+        padding-bottom:10px;
+    }
+    .bottommenu ul{
+        width:100%;
+        margin:auto;
+    }
+}
+@media screen and (max-width: 479px) {
+ .container{
+        width:100%;
+    }
+    .header{
+        width:100%;
+    }
+    .mainmenu{
+        display:block;
+        float:left;
+        margin-left:50px;
+    }
+    .headtext{
+        width:100%;
+        margin-top:80px;
+    }
+    .mainmenu li{
+    display:block;
+        }
+    .logo img{
+        margin-left:90px;
+    }
+    .icons .flex-container{
+        display:flex;
+        flex-direction: column;
+        margin:0 auto;
+    }
+    .preview{
+        display:block;
+        padding-bottom:700px;
+    }
+    .leftimg{
+        margin:auto;
+    }
+    .leftimg img{
+        width:40%;
+        margin-left:20px;
+    }
+    .centerimg{
+        margin:auto;
+        margin-top:200px;
+    }
+    .centerimg img{
+      width:40%;
+      margin-left:20px;
+    }
+    .rightimg{
+        margin:auto;
+        margin-top:460px;
+    }
+    .rightimg img{
+      width:40%;
+      margin-left:20px;
+    }
+    .preview{
+        width:100%;
+    }
+    .preview p{
+        display:block;
+        width:100%;
+    }
+    .purchasenow{
+        width:100%;
+        padding-bottom:150px;
+    }
+    .textleft{
+     margin:auto;
+        float:left;
+        margin-left:10px;
+        display:block;
+        float:left;
+        width:100%;
+    }
+    .purchasenow a{
+        display:block;
+        float:left;
+        margin-left:100px;
+        margin-top:10px;
+    }
+    .projects h2{
+        width:100%;
+    }
+    .projects p{
+        width:100%;
+    }
+    .projmenu ul li{
+        display:block;
+        margin:30px;
+    }
+    .gallery{
+        margin:auto;
+        padding-bottom:1400px;
+    }
+    .proj1{
+        margin-left:0px;
+        margin-bottom:30px;
+    }
+    .proj2{
+        margin-left:0px;
+        margin-bottom:30px;
+    }
+    .proj3{
+        margin-left:0;
+        margin-bottom:0;
+    }
+    .proj4{
+        margin-left:0;
+        margin-bottom:0;
+    }
+    .proj5{
+        margin-left:0;
+    }
+    .proj6{
+        margin-left:0;
+        margin-bottom:30px;
+    }
+    .gallery a{
+        margin:auto;
+        margin-left:100px;
+    }
+    .video{
+        display:block;
+        width:100%;
+        margin:auto;
+    }
+    .video a{
+        margin-left:130px;
+    }
+    .video h2{
+        margin:auto;
+    }
+    .video p{
+        width:100%;
+        margin:auto;
+    }
+    .mobile{
+        width:100%;
+        margin:auto;
+        padding-bottom:1200px;
+    }
+    .mobile img{
+        width:100%;
+        margin:auto;
+        display:block;
+        float:left;
+    }
+    .mobiletext{
+        width:100%;
+        margin:auto;
+    }
+    .mobiletext h2{
+        margin-top:600px;
+    }
+    .mobiletext ul{
+        margin-left:30px;
+        width:100%;
+    }
+    .achievements{
+        width:100%;
+        margin:auto;
+    }
+    .achievements .flex-container{
+         display:flex;
+        flex-direction: column;
+        margin:0 auto;
+    }
+    .posts{
+        width:100%;
+        margin:auto;
+    }
+    .posts p{
+        margin:auto;
+        width:100%;
+    }
+    .postsexamples .flex-container{
+         display:flex;
+        flex-direction: column;
+        margin:0 auto;
+    }
+    .partners{
+        margin:auto;
+        width:100%;
+    }
+    .partners .flex-container{
+        display:flex;
+        flex-direction: column;
+        margin:0 auto;
+    }
+    .partners .flex-container a{
+        margin-bottom:20px;
+    }
+    .footer{
+        width:100%;
+        margin:auto;
+    }
+    .footerup{
+        width:100%;
+        padding-bottom:1650px;
+    }
+    .compinfo{
+        width:100%;
+        margin:auto;
+    }
+    .logo2{
+        margin-left:30px;
+    }
+    .compinfo p{
+        margin-left:30px;
+    }
+    .more a{
+        margin-left:30px;
+    }
+    .recentposts{
+        width:100%;
+        margin:auto;
+    }
+    .recentposts h3{
+        margin-left:30px;
+    }
+    .footerposts{
+        margin-left:30px;
+    }
+    .bottom{
+        width:100%;
+        margin:auto;
+        padding-bottom:200px;
+    }
+    .bottommenu p{
+        width:100%;
+        margin:auto;
+        margin-left:30px;
+        padding-bottom:10px;
+    }
+    .bottommenu ul{
+        width:100%;
+        margin:auto;
+    }
 }
